--- a/css/style.css
+++ b/css/style.css
@@ -397,12 +397,11 @@ color:
     margin-bottom: 30px;
 }
 .picture .box {
-    margin: 15px 0;
-    box-shadow: 0px 0px 10px 
-    #ededed;
-    height: 120px;
-    padding: 10px;
-    border-radius: 10px;
+  margin: 15px 0;
+  box-shadow: 0px 0px 10px #ededed;
+  height: 120px;
+  padding: 20px;
+  border-radius: 10px;
 }
 .picture .box .bg {
     background-image: url('https://www.pictureperfectohio.com/images/badges/event_hero_sprite.jpg');
@@ -412,7 +411,7 @@ color:
     float: left;
     margin-right: 10px;
     margin-top: 10px;
-
+    display: none;
 }
 .picture .box .text {
     display: flow-root;
